--- a/track-feature-clustering.ipynb
+++ b/track-feature-clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "47608aeb",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,15 @@
     "import pandas as pd\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "import numpy as np\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cluster import KMeans\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "8869090a",
    "metadata": {},
    "outputs": [],
@@ -63,18 +66,6 @@
    "metadata": {},
    "source": [
     "# Clustering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "382eb60d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.cluster import KMeans\n"
    ]
   },
   {
@@ -1165,12 +1156,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1542b24d",
+   "metadata": {},
+   "source": [
+    "# We try cosine similarity"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25614aac",
+   "execution_count": 15,
+   "id": "d4c2ad93",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import cosine similarity from sklearn\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "features = ['artist_pop', 'track_pop', 'key', 'mode', 'tempo', 'time_signature', 'energy', 'danceability', 'instrumentalness']\n",
+    "X = df[features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "19ea8aff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We want to get pandas dummy variables for key, mode and time_signature\n",
+    "X = pd.get_dummies(X, columns=['key', 'mode', 'time_signature'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "624395f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We scale the data with StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "62359bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We calculate the cosine similarity\n",
+    "cosine_sim = cosine_similarity(X)\n",
+    "\n",
+    "# Create a pandas dataframe with multiindex\n",
+    "df_cosine_sim = pd.DataFrame(cosine_sim, index=df.track_name, columns=df.track_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "699c8f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "track_name\n",
+       "Le voci sottovetro: Moro, Lasso (after C. Gesualdo)    0.947038\n",
+       "Powerline                                              0.910983\n",
+       "Silver                                                 0.891536\n",
+       "Unfolding                                              0.873295\n",
+       "Toronto Funhouse                                       0.855761\n",
+       "Name: 1000 Fejl, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "track_name = '1000 Fejl'\n",
+    "df_cosine_sim[track_name].sort_values(ascending=False)[1:6]"
+   ]
   }
  ],
  "metadata": {
